[package]
name = "arcium-perp"
version = "0.1.0"
description = "Arcium private perp trading program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arcium_perp"

[features]
no-entrypoint = []
no-idl = []
no-log-messages = []
skip-seed-verification = []
idl-build = ["anchor-lang/idl-build", "arcium-anchor/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang   = { version = "0.32.1", features = ["derive", "init-if-needed"] }
anchor-spl    = { version = "0.32.1", features = ["token"] }
arcium-anchor = { version = "=0.9.7" }
arcium-macros = { version = "=0.9.7" }
arcium-client = { version = "=0.9.7", default-features = false }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }